--- a/conradsWebsite/tasks/templates/tasks/add.html
+++ b/conradsWebsite/tasks/templates/tasks/add.html
@@ -2,9 +2,10 @@
 
 {% block body %}
     <h1>Add task</h1>
-    <form action="">
-        <input type="text" name="task">
-        <input type="submit" name="task">
+    <form action="{% url 'tasks:add' %}" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit">
     </form>
-
+    <a href="{% url 'tasks:index' %}">View Tasks</a>
 {% endblock %}
